# easyFit

./: .gitignore
agents/: ANALYTICS_CATALOG.md  ARCHITECTURE.md  CHANGELOG.md  CURRENT_STATE.md  DATA_ARCHITECTURE.md  DECISION_LOG.md  HEALTHKIT_CATALOG.md  MARKET_AND_MONETIZATION.md  OPEN_QUESTIONS.md  PRIVACY_AND_SECURITY.md  PRODUCT_VISION.md  PROJECT_CHARTER.md  QUALITY_STANDARDS.md  README.md  RISKS.md  ROADMAP.md  SESSION_LOG.md  TASKS.md  TEST_STRATEGY.md  UX_PRINCIPLES.md
agents/decisions/: ADR-0001-repository-and-phase-1-app-architecture.md  ADR-0002-local-analytics-first.md  README.md
agents/research/: 2026-07-09-phase-1-ios-healthkit-architecture.md  README.md  apple-health-export-format.md
agents/runbooks/: README.md
agents/specifications/: PHASE_1_HEALTHKIT_DISCOVERY.md  PHASE_1_LOCAL_HEALTH_IMPORT.md  README.md
fixtures/synthetic/apple-health/apple_health_export/: export.xml
fixtures/synthetic/apple-health/apple_health_export/workout-routes/: route_synthetic.gpx
services/importer/: README.md  pyproject.toml
services/importer/src/easyfit_importer/: __init__.py  __main__.py  cli.py  dates.py  inputs.py  models.py  parser.py  sources.py  version.py
services/importer/tests/: test_dates.py  test_inputs.py  test_inventory.py
